# aegis-vault

./: .gitignore  CHANGELOG.md  DEMO.md  Dockerfile  LICENSE  README.md  USER_GUIDE.md  docker-compose.yml  pyproject.toml  seal.spec  test_roundtrip.py
.canaries/: canaries.json.hmac
.github/workflows/: test.yml
benchmarks/: RESULTS.md  bench_cipher.py
docs/: ARCHITECTURE.md  IMPLEMENTATION_PAPER.md  TEST_DOCUMENTATION.md  THREAT_MODEL.md  USER_GUIDE.md
packaging/: README.md  build.py  seal.spec
src/aegis/: __init__.py  _errors.py  audit.py  biometric.py  canary.py  cipher.py  cli.py  crypt_storage.py  key_manager.py  report.py  sharing.py
src/aegis/gui/: __init__.py  app.py
src/aegis/tui/: __init__.py  _constants.py  app.py
src/aegis/tui/screens/: __init__.py  canary.py  entry.py  generator.py  login.py  picker.py  report.py  vault.py
src/aegis/tui/widgets/: __init__.py  strength.py
tests/: test_atomic_write.py  test_audit.py  test_biometric.py  test_canary.py  test_cipher.py  test_cli.py  test_crypt_storage.py  test_data_leak.py  test_key_manager.py  test_report.py  test_robustness.py  test_sharing.py  test_tui_screens.py
