[project]
name = "seal"
version = "0.1.0"
description = "Zero-cloud encrypted file storage with tamper-evident audit, canary detection, and compliance reports"
readme = "README.md"
license = {text = "BSL-1.1"}
requires-python = ">=3.10"
authors = [
    {name = "M. Zeeshan"},
]
dependencies = [
    "cryptography>=41.0.0",
    "click>=8.0",
    "rich>=13.0",
    "rich-click>=1.8",
    "textual>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
seal = "aegis.cli:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
